# Modern_Challenge

./: CMakeLists.txt
Math_Problems/: 4.cpp  5.cpp  6.cpp  8.cpp  9.cpp  9.out
