cmake_minimum_required(VERSION 3.10)
project(Modern_Challenge)

set(CMAKE_CXX_STANDARD 17)

add_executable(Modern_Challenge main.cpp Math_Problems/1.cpp Math_Problems/2.cpp Math_Problems/3.cpp Math_Problems/4.cpp Math_Problems/5.cpp Math_Problems/6.cpp Math_Problems/7.cpp Math_Problems/8.cpp Math_Problems/9.cpp)